# acrome_ws

./: Readme.md  debug_urdf.urdf  frames_2025-08-11_11.41.17.gv  frames_2025-08-19_14.11.00.gv  frames_2025-08-25_17.28.32.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_steering_controller/include/ackermann_steering_controller/: ackermann_steering_controller_parameters.hpp
log/: latest_build  latest_list
src/acrome_mini_robot/: CMakeLists.txt  package.xml
src/acrome_mini_robot/config/: acrome_controller.yaml  my_controller.yaml  slam_params.yaml
src/acrome_mini_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/acrome_mini_robot/install/acrome_mini_robot/share/acrome_mini_robot/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/acrome_mini_robot/install/acrome_mini_robot/share/acrome_mini_robot/cmake/: acrome_mini_robotConfig.cmake
src/acrome_mini_robot/install/acrome_mini_robot/share/acrome_mini_robot/launch/: display.launch
src/acrome_mini_robot/install/acrome_mini_robot/share/acrome_mini_robot/urdf/: acrome_mini_robot.urdf
src/acrome_mini_robot/launch/: gazebo.launch  gazebo_launch.py  gz.control_launch.py  lidar_data.txt  robot_controller.py  teleop_launch.py
src/acrome_mini_robot/log/: latest_build
src/acrome_mini_robot/nodes/: nodesodom_log.csv  odometry_publisher.py
src/acrome_mini_robot/urdf/: acrome_mini_robot.urdf.xacro  acrome_mini_robot.xacro  acrome_mini_robot.xacro.urdf
src/acrome_mini_robot/worlds/: acrome_mini_robot.world
(+565 files in other folders)
